--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^3.0.0-beta.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-alice-carousel": "^2.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "three": "^0.121.1"
